# mulp-ai

./: .dockerignore  .gitignore  README.md  pyrightconfig.json  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pyrightconfig.json
backend/app/: deps.py  main.py
backend/app/agentic/: review.py
backend/app/api/: routes.py
backend/app/core/: clock.py  config.py  money.py
backend/app/db/: ledger.py  models.py  repository.py
backend/app/engine/: __init__.py  adjudication.py  conditions.py  confidence.py  decide.py  eligibility.py  fraud.py  gate.py  invariants.py  names.py  results.py  trace_util.py  view.py
backend/app/extraction/: base.py  eval_extractor.py  live_extractor.py
backend/app/graph/: __init__.py  build.py  nodes.py  runner.py  state.py
backend/app/llm/: deepseek.py  openai_client.py
backend/app/observability/: datasets.py  langfuse_eval.py  logs.py  setup.py  tracing.py
backend/app/policy/: repository.py
backend/app/schemas/: __init__.py  analytics.py  claim.py  decision.py  enums.py  extraction.py  review.py  trace.py
backend/eval/: agent_eval.py  docgen.py  harness.py  judge_eval.py  live_harness.py  make_upload_docs.py  sample_gallery.py  sample_specs.py
backend/tests/: conftest.py  test_adjudication.py  test_agentic.py  test_analytics.py  test_api.py  test_clock.py  test_conditions.py  test_confidence.py  test_config.py  test_decide.py  test_eligibility.py  test_extraction.py  test_fraud.py  test_gate.py  test_graph_eval.py  test_harness.py  test_hitl.py  test_invariants.py  test_live_extractor.py  test_logging.py  test_misc.py  test_money.py  test_names.py  test_policy.py  test_schemas.py  test_store_and_stream.py  test_view.py
deploy/langfuse/: .env.example  README.md  codespace-tunnel.sh  codespace-up.sh  docker-compose.yml  setup.sh
docs/: ARCHITECTURE.md  CONTRACTS.md  EVAL_REPORT.md  EVAL_REPORT_AGENT.md  eval_report_agent.json
frontend/: .dockerignore  .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DecisionView.tsx  Devlog.tsx  DocumentPreview.tsx  GroundTruth.tsx  HeaderNav.tsx  HumanReview.tsx  Pipeline.tsx  ReviewPanel.tsx  Trace.tsx  primitives.tsx
frontend/lib/: api.ts  auth-client.ts  auth.ts  format.ts  (+1 more)
infra/: docker-compose.yml  otel-collector.yaml
(+8 files in other folders)
